--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "drupal/coder": "^8.3",
     "friendsofphp/php-cs-fixer": "^3",
     "phpmd/phpmd": "^2",
+    "drupol/phpcsfixer-configs-drupal": "*",
     "phpstan/phpstan": "^0"
   },
   "license": "MIT",
@@ -17,14 +18,14 @@
   ],
   "scripts": {
     "pre-update-cmd": [
-        "rm -f ./vendor/squizlabs/php_codesniffer/src/Standards/Drupal"
+      "rm -f ./vendor/squizlabs/php_codesniffer/src/Standards/Drupal"
     ],
     "post-update-cmd": [
-        "ln -s ./vendor/drupal/coder/coder_sniffer/Drupal ./vendor/squizlabs/php_codesniffer/src/Standards/Drupal",
-        "test -d ./drupal-8 && cd drupal-8 && composer update --no-interaction; exit 0",
-        "test -d ./drupal-9 && cd drupal-9 && composer update --no-interaction; exit 0",
-        "test ! -d ./drupal-8 && composer create-project drupal-composer/drupal-project:8.x-dev drupal-8 --no-interaction; exit 0",
-        "test ! -d ./drupal-9 && composer create-project drupal-composer/drupal-project:9.x-dev drupal-9 --no-interaction; exit 0"
+      "ln -s ./vendor/drupal/coder/coder_sniffer/Drupal ./vendor/squizlabs/php_codesniffer/src/Standards/Drupal",
+      "test -d ./drupal-8 && cd drupal-8 && composer update --no-interaction; exit 0",
+      "test -d ./drupal-9 && cd drupal-9 && composer update --no-interaction; exit 0",
+      "test ! -d ./drupal-8 && composer create-project drupal-composer/drupal-project:8.x-dev drupal-8 --no-interaction; exit 0",
+      "test ! -d ./drupal-9 && composer create-project drupal-composer/drupal-project:9.x-dev drupal-9 --no-interaction; exit 0"
     ]
   }
 }
