--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
   ],
   "scripts": {
     "pre-update-cmd": [
-      "rm -f ./vendor/squizlabs/php_codesniffer/src/Standards/Drupal"
+      "rm -f $PWD/vendor/squizlabs/php_codesniffer/src/Standards/Drupal"
     ],
     "post-update-cmd": [
-      "ln -s ./vendor/drupal/coder/coder_sniffer/Drupal ./vendor/squizlabs/php_codesniffer/src/Standards/Drupal",
+      "ln -s $PWD/vendor/drupal/coder/coder_sniffer/Drupal $PWD/vendor/squizlabs/php_codesniffer/src/Standards/Drupal",
       "test -d ./drupal-8 && cd drupal-8 && composer update --no-interaction; exit 0",
       "test -d ./drupal-9 && cd drupal-9 && composer update --no-interaction; exit 0",
       "test ! -d ./drupal-8 && composer create-project drupal-composer/drupal-project:8.x-dev drupal-8 --no-interaction; exit 0",
