--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "friendsofphp/php-cs-fixer": "^3",
     "phpmd/phpmd": "^2",
     "drupol/phpcsfixer-configs-drupal": "*",
-    "phpstan/phpstan": "^0"
+    "phpstan/phpstan": "^0",
+    "slevomat/coding-standard": "^8"
   },
   "license": "MIT",
   "authors": [
@@ -22,10 +23,15 @@
     ],
     "post-update-cmd": [
       "ln -s $PWD/vendor/drupal/coder/coder_sniffer/Drupal $PWD/vendor/squizlabs/php_codesniffer/src/Standards/Drupal",
-      "test -d ./drupal-8 && cd drupal-8 && composer update --no-interaction; exit 0",
+      "test -d ./drupal-10 && cd drupal-10 && composer update --no-interaction; exit 0",
       "test -d ./drupal-9 && cd drupal-9 && composer update --no-interaction; exit 0",
-      "test ! -d ./drupal-8 && composer create-project drupal-composer/drupal-project:8.x-dev drupal-8 --no-interaction; exit 0",
+      "test ! -d ./drupal-10 && composer create-project drupal-composer/drupal-project:10.x-dev drupal-10 --no-interaction; exit 0",
       "test ! -d ./drupal-9 && composer create-project drupal-composer/drupal-project:9.x-dev drupal-9 --no-interaction; exit 0"
     ]
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
